fixing overflow for about page

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-.gradient__bg {
-  /* background: url(../src/assets/Desktop\ -\ 3.png); */
+/* .gradient__bg {
+  background: url(../src/assets/Desktop\ -\ 3.png);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  /* overflow-x: hidden; */
-}
+  overflow-x: hidden;
+} */
 .loader__container {
   /* border: 2px solid red; */
   display: flex;
