--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -1,9 +1,10 @@
 .skills {
-  /* border: 2px solid navajowhite; */
+  border: 2px solid navajowhite;
   display: flex;
   flex-wrap: wrap;
   width: 55%;
   gap: 10px;
+  overflow: hidden;
 }
 .skills li {
   /* border: 2px solid red; */
