--- a/src/sections/about/about.css
+++ b/src/sections/about/about.css
@@ -1,38 +1,31 @@
-section {
-  width: 100vw;
-  overflow-x: hidden;
-  /* border: 2px solid red; */
-  padding: 5rem 0;
-}
 #about {
   width: 100vw;
+  display: grid;
+  place-items: center;
   overflow-x: hidden;
-  /* border: 2px solid red; */
+  /* border: 3px solid pink; */
 }
 .about__container {
   width: 80%;
   /* border: 2px solid red; */
+  padding: 0 5%;
 }
 .about__top {
   /* border: 2px solid yellow; */
-  /* margin-top: 164px; */
   margin-top: 70px;
   display: flex;
   align-items: center;
-  justify-content: center;
-  gap: 96px;
+  justify-content: space-between;
 }
 .about__top .about__left {
   /* border: 2px solid black; */
+  width: 50%;
   display: flex;
   justify-content: center;
   flex-direction: column;
   gap: 50px;
 }
 .about__top .about__left h4 {
-  /* border: 2px solid red; */
-  /* width: 665px;
-  height: 42px; */
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 500;
@@ -41,12 +34,10 @@ section {
   text-transform: capitalize;
   color: #ffffff;
   text-shadow: 0px 6px 24px rgba(0, 0, 0, 0.25);
-  /* margin-bottom: 60px; */
 }
 .about__top .about__left .about__left-paragraphs {
   /* border: 2px solid saddlebrown; */
-  width: 605px;
-  height: 264px;
+  width: 98%;
   font-family: 'Lato';
   font-style: normal;
   font-weight: 300;
@@ -66,6 +57,10 @@ section {
   height: 395px;
   transition: var(--transition);
   position: relative;
+  /* margin-right: 55px;
+  margin-bottom: 20px; */
+  margin-right: 4%;
+  margin-bottom: 2%;
 }
 .about__portrait img {
   border-radius: 9px;
@@ -90,16 +85,12 @@ section {
 .about__bottom {
   margin-top: 80px;
   display: flex;
-  /* align-items: center; */
-  padding: 0 100px;
   justify-content: center;
   flex-direction: column;
   gap: 30px;
   /* border: 2px solid blue; */
 }
 .about__bottom h4 {
-  /* width: 665px;
-  height: 42px; */
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 500;
@@ -112,13 +103,18 @@ section {
 
 /* media queries for tablet screens */
 @media screen and (max-width: 1024px) {
+  #about {
+    width: 100vw;
+    overflow-x: hidden;
+  }
   .about__top {
-    /* padding: 20px; */
     /* border: 2px solid gold; */
+    display: flex;
     flex-direction: column-reverse;
     text-align: center;
     justify-content: center;
     align-items: center;
+    gap: 5rem;
   }
   .about__top .about__left {
     display: flex;
@@ -126,46 +122,51 @@ section {
     align-items: center;
     justify-content: center;
     text-align: center;
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    /* height: 90%; */
   }
-  .about__portrait {
-    margin-right: 55px;
+  .about__top .about__left .about__left-paragraphs {
+    /* border: 2px solid saddlebrown; */
+    width: 90%;
+    gap: 1rem;
   }
-  .about__bottom {
-    padding: 0;
-  }
-
-  /* .about__container {
-    grid-template-columns: 1fr;
-  } */
-  /* .about__right h2 {
-    text-align: center;
-  } */
 }
 
 /* media queries for mobile screens */
 @media screen and (max-width: 600px) {
-  .about__top {
+  #about {
+    width: 100vw;
+    overflow-x: hidden;
   }
-  .about__top .about__left {
-    /* border: 2px solid pink; */
-    /* height: 500px; */
+  .about__container {
+    width: 95%;
+    /* border: 2px solid red; */
+    padding: 0 2%;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 100%;
+    flex-direction: column;
   }
-  .about__top .about__left h4 {
-    width: auto;
-    height: auto;
-    /* border: 2px solid green; */
+  .about__top {
+    /* border: 2px solid darkblue; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 0;
   }
+
+  .about__top .about__left {
+    /* border: 2px solid pink; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* width: 100%;
+    height: 100%; */
+  }
+
   .about__top .about__left .about__left-paragraphs {
     /* border: 2px solid grey; */
-    width: 330px;
-    height: auto;
     font-family: 'Lato';
     font-style: normal;
     font-weight: 300;
@@ -176,18 +177,19 @@ section {
   }
   .about__portrait {
     border-radius: 9px;
-    width: 250px;
-    height: 345px;
+    width: 230px;
+    height: 325px;
     transition: var(--transition);
     position: relative;
-    margin-right: 55px;
+    margin-right: 0%;
+    margin-bottom: 0%;
   }
   .about__portrait::after {
     content: '';
     box-sizing: border-box;
     position: absolute;
-    width: 260.11px;
-    height: 345.09px;
+    width: 240.11px;
+    height: 325.09px;
     top: 8%;
     left: 12%;
     border: 7.73585px solid #52d6f4;
